--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.3",
-    "sass-loader": "10"
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.35",
+    "sass-loader": "10",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
