--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "buefy": "^0.9.7",
-    "core-js": "^3.9.1",
+    "core-js": "^3.11.2",
     "nuxt": "^2.15.3",
     "nuxt-buefy": "^0.4.4",
-    "sass": "^1.32.11",
+    "sass": "^1.32.12",
     "scss": "^0.2.4",
     "scss-loader": "^0.0.1",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "three": "^0.128.0",
+    "three.js": "^0.77.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.3",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.35",
-    "sass-loader": "10",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
+    "sass-loader": "10.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
 }
